Fixed whitespaces in chat message boxes #903

--- a/src/component/chat-box/chat-message.css
+++ b/src/component/chat-box/chat-message.css
@@ -27,6 +27,7 @@
 }
 .chat-message-content {
 	overflow-wrap: break-word;
+	white-space: pre;
 }
 .reply-message-boxed {
 	font-size: var(--sl-font-size-x-small);
